PROJECT("romdirfs" C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(${CMAKE_ROOT}/Modules/FindPkgConfig.cmake)
PKG_CHECK_MODULES(FUSE fuse>=2.6)

SET(CMAKE_C_FLAGS "-Wall -Werror -O2 -s ${FUSE_CFLAGS_OTHER}")
INCLUDE_DIRECTORIES("${FUSE_INCLUDE_DIRS}")

#ADD_DEFINITIONS(-DUSE_MMAP)

ADD_EXECUTABLE(romdirfs romdir.c romdirfs.c)
TARGET_LINK_LIBRARIES(romdirfs ${FUSE_LIBRARIES})
INSTALL(TARGETS romdirfs DESTINATION bin)
