[package]
name = "romdirfs"
version = "0.1.0"
description = "Userspace filesystem to access IOP modules in PS2 IOPRP images and BIOS dumps"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
fuse = { git = "https://github.com/zargony/fuse-rs", branch = "master" }
libc = "0.2"
thiserror = "1.0"
