INCLUDE(${CMAKE_ROOT}/Modules/FindPkgConfig.cmake)
PKG_CHECK_MODULES(FUSE, fuse>=2.6.0)

SET(CMAKE_C_FLAGS "-Wall -O2 -s ${FUSE_CFLAGS_OTHER}")
INCLUDE_DIRECTORIES("${FUSE_INCLUDE_DIRS}")

ADD_EXECUTABLE(romdirfs romdir.c romdirfs.c)
TARGET_LINK_LIBRARIES(romdirfs ${FUSE_LIBRARIES})
INSTALL(TARGETS romdirfs DESTINATION bin)

ADD_EXECUTABLE(romdir romdir.c)
SET_TARGET_PROPERTIES(romdir PROPERTIES COMPILE_FLAGS -D_ROMDIR_STANDALONE)
INSTALL(TARGETS romdir DESTINATION bin)
